--- a/src/index.css
+++ b/src/index.css
@@ -19,3 +19,28 @@
     src: local("TitilliumWeb-Black");
     src: url("./assets/fonts/TitilliumWeb-Black.ttf") format("truetype")
 }
+
+*{
+    padding: 0;
+    margin: 0;
+ }
+
+ @layer utilities{
+    .LogoClass{
+        @apply w-[40%] sm:w-[30%] md:w-[50%] h-auto aspect-video object-contain mix-blend-color-burn opacity-90;
+    }
+
+    .activeClass{
+        @apply bg-primary rounded-full text-white px-3 py-1
+    }
+ }
+
+header{
+    z-index: 10001;
+}
+
+::-webkit-scrollbar{
+    width: 0;
+}
+
+
